# cpp_course

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  MIGRATION.md  QUICK_REFERENCE.md  README.md  build-course.py  build-debug.cmd  build-release.cmd  clean.cmd  conanfile.txt  config_debug_build.cmd  config_release_build.cmd  configure.cmd  cpp-build  cppbuild.cmd  download.htm  ln-modules.sh  vcpkg.json  vcpkg.json.bak
benchmarks/: halo_eigen.xlsx
book/: make.bat
book_resources/: ch_arrays.md  ch_boost_python.md  ch_boost_python.tex  ch_control_structures.md  ch_control_structures.tex  ch_cpp_fortran.md  ch_cpp_fortran.tex  ch_data_structures.md  ch_functions.md  ch_functions.tex  ch_input_output.md  ch_input_output.tex  ch_iterating.md  ch_iterating.tex  ch_matrices.md  ch_matrices.tex  ch_oop.md  ch_oop.tex  ch_operators.md  ch_operators.tex  ch_strings.md  ch_strings.tex  ch_variables.md  ch_vector_and_lists.md  cpp_book.aux  cpp_book.tex  cpp_chapters.tex
ch_arrays/: CMakeLists.txt  allocating_array.cpp  allocating_memory.cpp  array_2d.cpp  cont_array_2d.cpp  cont_array_2d_2.cpp  struct_array.cpp  struct_array2.cpp
ch_arrays_modern/: CMakeLists.txt  allocating_array.cpp  allocating_memory.cpp  array_2d.cpp  cont_array_2d.cpp  std_array1.cpp  std_array2.cpp  struct_array.cpp  struct_array2.cpp
ch_boost_python/: CMakeLists.txt  mymodule1.cpp
ch_concurrency/: CMakeLists.txt  async1.cpp  async2.cpp  halo_eigen1.cpp  par_algo1.cpp  par_algo2.cpp  par_algo3.cpp  par_for_each1.cpp  par_transform1.cpp  producer_consumer.cpp  safe_queue.h  threads0.cpp  threads1.cpp  threads1_algo.cpp  threads2.cpp  threads3.cpp  threads4.cpp  threads5.cpp  threads6.cpp
ch_control_structures/: CMakeLists.txt  if_statement1.cpp  if_statement2.cpp  if_statement3.cpp  switch_statement.cpp
ch_cpp_fortran/: CMakeLists.txt  cprog.cpp
ch_data_structures/: CMakeLists.txt  algo1.cpp  algo2.cpp  algo3.cpp  copy1.cpp  deque1.cpp  fill1.cpp  lambda1.cpp  lambda2.cpp  lambda3.cpp  lambda4.cpp  lambda5.cpp  list1.cpp  map1.cpp  numeric1.cpp  operations1.cpp  ranges1.cpp  remove1.cpp  transform1.cpp  vector1.cpp  vector2.cpp  vector3.cpp  vector4.cpp
ch_functions/: CMakeLists.txt  array_functions.cpp  array_functions2.cpp  array_utils.cpp  array_utils2.cpp  functions1.cpp  functions2.cpp  functions3.cpp  functions4.cpp  functions5.cpp  functions6.cpp  functions7.cpp  functions8.cpp
ch_input_output/: CMakeLists.txt  files1.cpp  files10.cpp  files2.cpp  files3.cpp  files4.cpp  files5.cpp  files7.cpp  files8.cpp  files9.cpp
ch_iterating/: CMakeLists.txt  do_statement.cpp  for_statement.cpp  for_statement2.cpp  iteration_control.cpp  while_statement.cpp
ch_matrices/: CMakeLists.txt  calfem_eig.cpp  calfem_eig.h  eigen_c_arrays1.cpp  matrix1_eig.cpp  matrix2_eig.cpp  matrix3_eig.cpp  matrix4_eig.cpp  matrix5_eig.cpp  matrix_expressions_1.cpp  matrix_openmp_1.cpp  matrix_openmp_2.cpp  matrix_reshape_1.cpp  matrix_slicing_1.cpp  matrix_solver_1.cpp  matrix_solver_2.cpp  matrix_solver_3.cpp  matrix_solver_4.cpp
ch_mixed_language/: CMakeLists.txt  c_mixed.c  c_mixed.h  mixed1.cpp  mixed2.c  point.cpp  point.h  point_advanced.cpp  point_advanced.h  point_python.cpp  point_python_advanced.cpp  run_pybind11_tests.bat  run_pybind11_tests.sh  test_point_advanced.py  test_point_basic.py
ch_mixed_language/python/: mathext.cpp  mathext_build.cmd  mathext_build.py  mathextsimple.cp312-win_amd64.pyd  mathextsimple.cpp  mathextsimple_build.cmd  mathextsimple_build.py  mathextsimple_pb.cp312-win_amd64.pyd  mathextsimple_pb.cpp  mathextsimple_pb_build.cmd  mathextsimple_pb_build.py  readme.md  test_build.cmd  test_build.py  test_ext.cpp
ch_modern/: CMakeLists.txt  smart_pointers1.cpp
ch_modern/async1/: CMakeLists.txt
ch_modern/threads1/: CMakeLists.txt
ch_modern/threads2/: CMakeLists.txt
ch_modern/threads3/: CMakeLists.txt  main.cpp
ch_modern/threads4/: CMakeLists.txt
ch_oop/: CMakeLists.txt  circle.cpp  circle.h  classes1.cpp  classes2.cpp  composite.cpp  composite.h  point.cpp  point.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  shapes1.cpp  shapes2.cpp  shapes3.cpp  shapes4.cpp  shapes5.cpp  shapes6.cpp
ch_operators/: CMakeLists.txt  operators1.cpp  (+2 more)
ch_qt/beam_app/: CMakeLists.txt  beam_app_menus.qss  beam_app_resource.qrc  beam_app_toolbar.qss  beam_model.cpp  beam_model.h  beam_view.cpp  beam_view.h  calfem.cpp  calfem.h  calfem_eig.cpp  calfem_eig.h  custom_title_bar.cpp  custom_title_bar.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  output_redirector.cpp  output_redirector.h  result_table_model.cpp  result_table_model.h
ch_qt/buttons/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
ch_qt/calculator/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
ch_qt/drawing1/: CMakeLists.txt  drawing_area.cpp  drawing_area.h  drawing_kit.cpp  drawing_kit.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  render_area.cpp  render_area.h
ch_qt/editor_app/: CMakeLists.txt  editor_app_menus.qss  editor_app_res.qrc  editor_app_toolbar.qss  main.cpp  mainwindow.cpp  mainwindow.h
ch_qt/list_combo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
ch_qt/plotting/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
ch_qt/progress_bar/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
ch_qt/qt0/: CMakeLists.txt  mainwindow.h
ch_qt/qt1/: CMakeLists.txt
ch_qt/qt3/: CMakeLists.txt
ch_qt/qt3d1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
ch_qt/qt5/: CMakeLists.txt
ch_qt/qt6/: CMakeLists.txt
ch_qt/qt7/: CMakeLists.txt
ch_qt/qt_step2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
ch_strings/: CMakeLists.txt  strings1.cpp  strings2.cpp  strings3.cpp  strings4.cpp  strings5.cpp
ch_variables/: CMakeLists.txt  array_types1.cpp  array_types2.cpp  auto1.cpp  auto2.cpp  char_types1.cpp  class_enum.cpp  double_types1.cpp  enum_types.cpp  int_types1.cpp  int_types2.cpp  numerical_limits.cpp  pointers1.cpp  pointers2.cpp  reference_type.cpp  structured_type.cpp
ch_vtk/: CMakeLists.txt  vtk1.cpp  vtk2.cpp  vtk3.cpp
(+175 files in other folders)
